--- a/CounterWebApp/pom.xml
+++ b/CounterWebApp/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>alli.saidulu</groupId>
 	<artifactId>CounterWebApp</artifactId>
 	<packaging>war</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>2.1</version>
 	<name>CounterWebApp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
